syntax = "proto3";

package reviews;

option go_package = "reviews/";

service ReviewService {
  rpc Search(ReviewFilter) returns (ReviewResponse);
}

message ReviewFilter {
  string reviewer_name = 1;
  int32 min_rating = 2;
  int32 max_rating = 3;
  int64 min_timestamp = 4;
  int64 max_timestamp = 5;
}

message Review {
  string reviewer_name = 1;
  string title = 2;
  string text = 3;
  int32 rating = 4;
  int64 timestamp = 5;
}

message ReviewResponse {
  repeated Review reviews = 1;
}
